ui/css/treeherder.css
/* ... */
/**
  sheriff panel
*/
.add-new-exclusion input.ng-invalid.ng-dirty{border-color: #B94A48;}

/**
  Failures
*/

.th-failures-box {
    position: fixed;
    top: 46px;
    right:0px;
    padding:2px;
}

.th-failures-box li{
    background-color: #222;
    color: #999;
    border-color: #080808;
}
.th-failures-box li a{
    color: #428bca;
}

.view-nav {
    background-color: #353f47;
}

.view-nav a {
    color: lightgray;

}

/*
    Resultsets
*/

.th-revision-btn {
    margin-left: 10px;
    width: calc(100% - 170px);
}

.th-action-button span.dropdown:hover ul.dropdown-menu{
    display: block;
}

.th-action-button:after {
  content: none;
}

.th-rs-loading {
    width: 50px;
    display: inline-block;
    height: 35px;
    margin-bottom: -14px;
    margin-left: 5px;
}

.revision {
    font-size: 12px;
    padding-top: 2px;
    overflow: auto;
}

.revision > a:first-child {
    float: left;
    width: 7.5em;
    padding-top: 2px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.revision-comment {
    color: #777;
}

.platform {
    font-size: 12px;
    padding-left: 0;
    padding-right: 5px;
    width: 14.5em;
    min-width: 14.5em;
    overflow: hidden;
    vertical-align: top;
}

.job-row {
    display: table-cell;
    white-space: normal;
    word-break: normal;

}

.icon-superscript {
    vertical-align: super;
    font-size: 0.625em;
    margin-left: -0.2em;
}

.result-set {
    padding-bottom: 0px;
    margin-left: 0;
    margin-top: 2px;
    white-space: normal;
    width: 100%;
    border-top: 1px solid lightgrey;
    position: relative;
}

.result-set-body {
    padding-left: 15px;
    padding-right: 25px;
}

/* Encompasses unknown push,resultset,repo */
.unknown-message-body {
    padding-top: 10px;
}

.result-set-title-left {
    flex: 0 0 24.2em;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-right: 10px;
}

.result-set-fa-icon {
    float: left;
    padding-top: 4px;
    padding-right: 4px;
}

.result-counts {
    flex: none;
    -webkit-flex: none;
    padding-right: 10px;
}

.result-set-title {
    border-top: 1px solid black;
    padding: 2px 0px 0px 14px;
    white-space: nowrap;
    display: flex;
    display: -webkit-flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: space-between;
}

.result-set-left {
    display: flex;
    display: -webkit-flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;
    flex: auto;
    align-items: center;
}

.result-set-progress {
    color: #6f6d70;
    font-style: italic;
    margin-left: 10px;
}

.result-set-buttons {
    margin-right: 25px;
}

.result-set .revision-list {
    padding-left: 0;
}

.logviewer-icon {
    width: 14px;
    height: 16px;
    vertical-align: text-bottom;
    opacity: 0.7;
}

.logviewer-icon:hover {
    opacity: 0.9;
}

.cancel-job-icon {
    font-size: 13px;
}

.icon-blue {
    color: #68aae2;
}

.icon-green:hover {
    color: #0de00d !important;
}

.hover-warning:hover {
    color: #fa4444 !important;
}

.dim-quarter {
    opacity: 0.75;
}

.revision-text {
    overflow: hidden;
    text-overflow: ellipsis;
    width: 7.2em;
    display: inline-block;
    vertical-align: middle;
}

.revision-button {
    flex: 0 0 60px;
    margin-right: 4px;
    margin-left: 4px;
}

.revision-list {
    overflow: hidden;
    white-space: nowrap;
}

.result-set .job-list-pad {
    padding-right: 0;
}

.job-list table {
    width: 100%;
}

.job-list table tr {
    border-bottom: 1px dotted lightgrey;
}

.job-list table tr:nth-child(even) {
    background: #f8f8f8;
}

.result-set .job-list-nopad {
    padding-left: 0;
    padding-right: 0;
    display: block;
}

.selected-job {
    border: 4px solid;
    background-color: #fff;
}

.job-group {
    margin: 0 -3px 0 3px;
}

.job-btn {
  padding: 0 2px 0 2px;
  vertical-align: 0;
  line-height: 1.32;
  display: none;
}

.filter-shown {
    display: inline-block;
}

.table-super-condensed thead > tr > th,
.table-super-condensed tbody > tr > th,
.table-super-condensed tfoot > tr > th,
.table-super-condensed thead > tr > td,
.table-super-condensed tbody > tr > td,
.table-super-condensed tfoot > tr > td {
    padding: 2px;
    font-size: .9em;
}

/*
 * resizer
 */
div#bottom-panel-resizer {
    display: flex;
    flex: none;
    -webkit-flex: none;
    background-color: #919dad;
    cursor: ns-resize;
    height: 2px;
}


/*
 * bottom panel
 */

div#bottom-panel {
    background-color: #AAAAAA;
    font-size: 12px;

    height: 35%;
    max-height: 75%;
    flex: none;
    -webkit-flex: none;

    display: -webkit-flex;
    display:         flex;
    -webkit-flex-flow: column;
    flex-flow: column;
}

div#bottom-panel .navbar{
    border-radius: 0px;
    border-style: solid;
    border-color: #42484F;
    border-width:1px 0;
    height:33px;
    margin:0;
    font-size:12px;
    min-height: 33px;
    min-width: initial;
    overflow: hidden;
    z-index: 100;
}

div#bottom-panel .navbar-nav > ul{
    height:32px;
}

div#bottom-panel .navbar-nav > li > a{
    padding: 6px 15px;
    line-height: 19px;
}

div#bottom-panel .navbar-nav > li > a.disabled {
    cursor: not-allowed;
    text-decoration: none;
}

div#bottom-panel .navbar-nav > li.active a,
div#bottom-panel .navbar-nav > li.active a:hover,
div#bottom-panel .navbar-nav > li.active a:focus {
    outline: 0;
}

div#bottom-panel .navbar > ul.tab-headers > li{
    border-right: 1px solid #42484F;
}

.navbar.navbar-dark{
    background-color: #252C33;
    color: #CED3D9;
}

.navbar.navbar-dark .navbar-nav > li > a{
    color: #9FA3A5;
}

.navbar.navbar-dark .navbar-nav > li > a:hover,
.navbar.navbar-dark .navbar-nav > li > a:focus {
    background-color: #1E252B;
    color: #D3D8DA;
}
/* ... */

